# QtWs25

./: README.md
code/event_proto/: CMakeLists.txt  main.cpp
code/event_qmlproto/: CMakeLists.txt  Main.qml  serializer.h
code/event_qmlproto_v2/: Main.qml  main.cpp  serializer.h
code/event_qtproto/: CMakeLists.txt  event.proto  main.cpp
code/eventhub/: eventhub.proto
